--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
         
-                <!-- Pulpo -->
+                <!-- Solomillo 
                 <div class="fila-plato">
                     <div class="imagen-plato">
                         <img src="img/SolomilloAlborada.png" alt="Solomillo" loading="lazy">
@@ -64,11 +64,11 @@
                         <span>6,50 €</span>
                     </div>
                 </div>
-        
-                <!-- Costillar en salsa -->
+                -->
+                <!-- Pulpo -->
                 <div class="fila-plato">
                     <div class="imagen-plato">
-                        <img src="img/AlbeorosPulpo.webp" alt="Pulpo" loading="lazy">
+                        <img src="img/AlberosPulpo.webp" alt="Pulpo" loading="lazy">
                     </div>
                     <div class="info-plato">
                         <strong>Pulpo a las brasas</strong>
@@ -327,7 +327,7 @@
         <!-- Botones de contacto -->
         <div class="contacto-botones">
             <!-- Botón llamar -->
-            <a href="tel:854602180" class="btn-contacto btn-telefono">
+            <a href="tel:666113112" class="btn-contacto btn-telefono">
                 <span class="icono-svg">
                     <svg viewBox="0 0 24 24">
                         <path d="M6.62 10.79a15.053 15.053 0 006.59 6.59l2.2-2.2a1 
@@ -341,7 +341,7 @@
             </a>
 
             <!-- Botón WhatsApp -->
-            <a href="https://wa.me/+346866884XX?text=Hola%2C%20me%20llamo%20" target="_blank"
+            <a href="https://wa.me/+34666113112?text=Hola%2C%20me%20llamo%20" target="_blank"
                class="btn-contacto btn-whatsapp2">
                 <span class="icono-svg">
                     <svg viewBox="0 0 32 32">
