--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </div>
                     <div class="info-plato">
                         <strong>Chacinas variadas</strong>
-                        <p>Gran surtido de hacinas, pruébalas</p>
+                        <p>Gran surtido de chacinas, pruébalas</p>
                         <div class="alergenos-plato">
                             <span class="alergeno-mini" title="Gluten" data-alergeno="gluten">Ⓖ</span>
                             <span class="alergeno-mini" title="Moluscos" data-alergeno="moluscos">Ⓞ</span>
